[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/characters/ricky_rat/default.png" type="Texture" id=1]
[ext_resource path="res://scenes/boss/boss.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 115.0
height = 90.0

[node name="Boss" type="StaticBody2D" groups=["entity"]]
script = ExtResource( 2 )
attack_speed = 1

[node name="ImmuneCooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ActionLoop" type="Timer" parent="."]
wait_time = 0.5

[node name="Texture" type="Sprite" parent="."]
scale = Vector2( 0.185425, 0.185425 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="timeout" from="ImmuneCooldown" to="." method="_on_ImmuneCooldown_timeout"]
[connection signal="timeout" from="ActionLoop" to="." method="_on_ActionLoop_timeout"]
